Fix menu text not correctly vertically aligned

--- a/src/app.css
+++ b/src/app.css
@@ -1122,6 +1122,7 @@ body:has(.status-deck) .media-post-link {
   text-decoration: none;
   padding: 8px 16px !important;
   margin: -8px -16px !important;
+  align-items: center;
 }
 .szh-menu .szh-menu__item a.is-active {
   font-weight: bold;
